--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 ######################
 .DS_Store
 .DS_Store?
-._*
+/analyses/customer_analysis/insights/.~insight_exploration__90948.twbr
 .Spotlight-V100
 .Trashes
 ehthumbs.db
