--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 ######################
 .DS_Store
 .DS_Store?
+.~insight_exploration__78447
 /analyses/customer_analysis/insights/.~insight_exploration__90948.twbr
 .Spotlight-V100
 .Trashes
