Correct issue with previous commit

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 ######################
 .DS_Store
 .DS_Store?
-analyses/customer_analysis/insights/.~insight_exploration__78447.twbr/analyses/customer_analysis/insights/.~insight_exploration__90948.twbr
+analyses/customer_analysis/insights/.~insight_exploration__78447.twbr
 .Spotlight-V100
 .Trashes
 ehthumbs.db
